# PlaHMI

./: CMakeLists.txt  ColorSettings.qml  Main.qml  MainScreen.qml  README.md  main.cpp
PlaHMI/: CMakeLists.txt  main.cpp
PlaHMI/qml/: Main.qml
PlaHMI/qml/components/: ColorOverviewButtons.qml  ColorRangeBar.qml  ColorRangeTab.qml  StartButton.qml  StatusTabs.qml
PlaHMI/qml/layouts/: ColorOverviewLayout.qml  MainScreenLayout.qml
PlaHMI/qml/screens/: ColorOverview.qml  ColorSettings.qml  MainScreen.qml
qml/: Main.qml
qml/Screens/: ColorSettings.qml  MainScreen.qml
qml/components/: ColorOverviewTabs.qml  ColorRangeBar.qml  ColorRangeTab.qml  StartButton.qml  StatusTabs.qml
qml/layouts/: ColorOverviewLayout.qml  MainScreenLayout.qml
qml/screens/: ColorOverview.qml  ColorSettings.qml  MainScreen.qml
